# Text-processing

./: sync.sh
atk-training-tamil-helloworld/: pyproject.toml
atk-training-tamil-helloworld/atk_training_tamil_helloworld/: ex1.py  ex2.py
atk-training-tamil-p1/: pyproject.toml
atk-training-tamil-p1/tests/: exec_functions.py
atk-training-tamil-pythonsql/: README.md  pyproject.toml
atk-training-tamil-pythonsql/atk_training_tamil_pythonsql/: bulk_load_decorator.py  factorial_decorator.py
practicefiles/: add.sh  add1.sh  add2.sh  add3.sh  command.txt  new_files.sh  practice.md  trap.sh  usage.sh
practicefiles/rename/: rename_files.sh
tamil-web-miner/: .gitignore  .pypirc  Makefile
tamil-web-miner/apps/: .gitignore
tamil-web-miner/dockerbuild/: dockerfile_config.yaml  run_container_config.yaml
tamil-web-miner/dockerbuild/gpu/: python_requirements.txt
tamil-web-miner/models/: Makefile
tamil-web-miner/modules/: Makefile
tamil-web-miner/modules/tamil-web-mining-utils/: Makefile  README.md  setup.py
tamil-web-miner/modules/tamil-web-mining-utils/dockerbuild/: run_container_config.yaml
tamil-web-miner/modules/tamil-web-mining-utils/ref_docs/: build_start.sh
tamil-web-miner/modules/tamil-web-mining-utils/ref_docs/source/: conf.py
tamil-web-miner/ref_docs/: build_start.sh
tamil-web-miner/ref_docs/source/: conf.py
test/: m
